--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "^10.0.9",
     "@angular/platform-browser-dynamic": "^10.0.9",
     "@angular/router": "^10.0.9",
+    "ng-zorro-antd": "^10.0.2",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.1",
     "zone.js": "^0.10.3"
@@ -24,13 +25,13 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "9.0.0-rc.7",
     "@angular/compiler-cli": "9.0.0-rc.7",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
